force-app/main/default/objects/ZSFMatPais__x/ZSFMatPais__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>ZSFMatPaisSet</externalName>
    <label>ZSFMatPais</label>
    <pluralLabel>ZSFMatPaisSet</pluralLabel>
</CustomObject>