force-app/main/default/objects/ZSFMatPais__x/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activo</description>
    <externalDeveloperName>Activo</externalDeveloperName>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>