force-app/main/default/objects/ZSFMatPais__x/fields/Denominacion__c.field-meta.xml
<CustomField>
    <fullName>Denominacion__c</fullName>
    <description>Denominacion</description>
    <externalDeveloperName>Denominacion</externalDeveloperName>
    <label>Denominacion</label>
    <length>40</length>
    <type>Text</type>
</CustomField>