force-app/main/default/objects/ZSFMatPais__x/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>Pais</description>
    <externalDeveloperName>Pais</externalDeveloperName>
    <label>Pais</label>
    <length>3</length>
    <type>Text</type>
</CustomField>