force-app/main/default/objects/ZSFMatPais__x/fields/Umv__c.field-meta.xml
<CustomField>
    <fullName>Umv__c</fullName>
    <description>Umv</description>
    <externalDeveloperName>Umv</externalDeveloperName>
    <label>Umv</label>
    <length>3</length>
    <type>Text</type>
</CustomField>