force-app/main/default/objects/ZSFMatPais__x/fields/UrlTecnica__c.field-meta.xml
<CustomField>
    <fullName>UrlTecnica__c</fullName>
    <description>UrlTecnica</description>
    <externalDeveloperName>UrlTecnica</externalDeveloperName>
    <label>UrlTecnica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>